# Flappy-Bird-Clone

./: CMakeLists.txt  LICENSE  README.md  installer.sh
src/: Bird.cpp  Bird.hpp  Column.cpp  Column.hpp  Game.cpp  Game.hpp  Render.cpp  Render.hpp  main.cpp
